--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "name": "PWAsTest Root",
-  "short_name": "Root",
+  "short_name": "PWAsTest Root",
+  "description": "PWAsTest Root",
   "scope": "/PWAsTest/",
   "start_url": "/PWAsTest/",
-  "display": "standalone",
   "theme_color": "#5200CD",
   "background_color": "#FFFFFF",
+  "display": "standalone",
   "icons": [
     {
       "src": "/PWAsTest/icons/icon-root.png",
