--- a/app1/manifest.json
+++ b/app1/manifest.json
@@ -2,14 +2,14 @@
   "name": "PWAsTest App1",
   "short_name": "PWAsTest App1",
   "description": "PWAsTest App1",
-  "scope": "/PWAsTest/app1/",
-  "start_url": "/PWAsTest/app1/",
+  "scope": "./",
+  "start_url": "./?app",
   "theme_color": "#F0FF44",
   "background_color": "#FFFFFF",
   "display": "standalone",
   "icons": [
     {
-      "src": "/PWAsTest/icons/icon-app1.png",
+      "src": "./icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
