--- a/app3/json/manifest.json
+++ b/app3/json/manifest.json
@@ -9,7 +9,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "./icon.png",
+      "src": "./image/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
