--- a/testNativeApp1/manifest.json
+++ b/testNativeApp1/manifest.json
@@ -13,7 +13,7 @@
   "protocol_handlers": [
     {
       "protocol": "web+protocol1",
-      "url": "./?protocol=1"
+      "url": "./?protocol=%s"
     }
   ]
 }
