--- a/testNativeApp1/manifest.json
+++ b/testNativeApp1/manifest.json
@@ -14,6 +14,10 @@
     {
       "protocol": "web+a",
       "url": "./?link=%s&protocol=a"
+    },
+    {
+      "protocol": "web+href",
+      "url": "./?%s"
     }
   ]
 }
